# iriclib_v4

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  h5cgnsbase.cpp  h5cgnsbaseiterativedata.cpp  h5cgnsconditiongroup.cpp  h5cgnsfile.cpp  h5cgnsfileseparatesolutionutil.cpp  h5cgnsfilesolutionreader.cpp  h5cgnsflowsolution.cpp  h5cgnsgridattributes.cpp  h5cgnsgridcoordinates.cpp  h5cgnsparticlegroupimagesolution.cpp  h5cgnsparticlegroupsolution.cpp  h5cgnsparticlesolution.cpp  h5cgnspolydatasolution.cpp  h5cgnszone.cpp  h5cgnszonebc.cpp  h5util.cpp  iric.f90  iriclib.h  iriclib.pro  iriclibConfig.cmake.in  iriclib_complex.cpp  iriclib_ftoc.cpp  iriclib_grid.cpp  iriclib_grid.h  iriclib_gui_coorp.cpp  iriclib_not_withgridid.cpp  iriclib_not_withgridid.h  iriclib_sol_gridcoord.cpp  iriclib_sol_particlegroup.cpp  iriclib_sol_particlegroupimage.cpp  iriclib_sol_polydata.cpp  iriclib_solution.cpp  iriclib_wrapper.cpp  iriclib_wrapper.h  iricsolverlib_grid2d.cpp
.github/workflows/: build.yml
internal/: iric_logger.cpp
private/: h5cgnsbase_impl.cpp  h5cgnsconditiongroup_impl.cpp  h5cgnsfile_impl.cpp  h5cgnsgridcomplexconditiongroup_impl.cpp  h5cgnsparticlegroupimagesolution_impl.cpp  h5cgnszone_impl.cpp
public/: h5cgnsparticlegroupsolution_groupreader.cpp  h5cgnspolydatasolution_groupreader.cpp
python_binding/: CMakeLists.txt  build.bat  iric.i  iric_custom.py
python_binding/unittests_cgnsfile/unittests/: case_grid.py  main.py
unittests/test1/: CMakeLists.txt  test1.F90
unittests_cgnsfile/: CMakeLists.txt  case_grid.cpp  case_read_hdf5.cgn  case_sol_readwrite.cpp  cases.h  main.cpp
util/: gen_f90.py  gen_ftoc.py  gen_not_withgridid.py  gen_swig.py  gen_wrapper.py  iriclib_not_withgridid.cpp.header.txt
